testsuite/tests/rename/should_fail/T9815.stderr

T9815.hs:6:13: error: [GHC-47217]
    Illegal `..' notation for constructor ‘N’
      The constructor has no labelled fields
